--- a/kondicionery/templates/kondicionery/subitem.html
+++ b/kondicionery/templates/kondicionery/subitem.html
@@ -1,4 +1,7 @@
-{% extends "main/base.html" %} {% load static %} 
+{% extends "main/base.html" %} {% load static %}
+{% block title %}
+<title>{{ category.title }}</title>
+{% endblock title %}
 {% block css %}
 <link rel="stylesheet" href="{% static "css/units.5.css" %}"> 
 <link rel="stylesheet"href="{% static "css/units-tile.5.css" %}"> 
