--- a/main/templates/main/blocks/header.html
+++ b/main/templates/main/blocks/header.html
@@ -1,7 +1,7 @@
 <div id="header">
   <!--div id="header-title" style="background-color:#4c9ed9;"-->
   <div id="header-title">
-    <a href="{% url "main:home" %}" title="На главную">
+    <a href="/" title="На главную">
       <div id="header-title-logo" style="width: 180pt; height: 64pt">
         <!-- img src="/images/ps2.png" alt="ПрофКлимат СПб" style="position: absolute; top:-4pt;left:0pt;height:85pt;opacity: 0.7;font-weight: 800;"-->
         <div
