--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>{{ title }}</title>
+    {% block title %}{% endblock title %}
     <!--TMPL_INCLUDE NAME="meta.html"-->
     <!--TMPL_VAR NAME="META"-->
     <!--TMPL_VAR NAME="canonical"-->
@@ -11,6 +11,7 @@
     {% include "main/blocks/favicon.html" %}
     <link rel="stylesheet" href="{% static 'css/main.5.css' %}" />
     <style>#footer-social-twitter {display: inline-block;font-size: 180%;margin: 3pt;width: 32px;height: 32px;background: url("{% static "/images/footer-social_32x32.png" %}") 0 0 no-repeat;background-size: cover;}</style>
+    <style>#footer-social-vk {display: inline-block;font-size: 180%;margin: 3pt;width: 32px;height: 32px;background: url("{% static "/images/footer-social_32x32.png" %}") -64px 0 no-repeat;background-size: cover;}</style>
     <link rel="stylesheet" href="{% static 'css/typicons209.min.css' %}" />
     {% block css %}{% endblock %}
     <style>#viber:after {position: absolute;top: 2pt;left: 2pt;height: 20pt;width: 20pt;content: "";background-image: url({% static "/images/viber-icon.svg" %});background-size: contain;} #whatsapp {display: inline-block;text-decoration: none;background-image: url({% static "/images/whatsapp-icon.svg" %});background-size: contain;height: 24pt;width: 24pt;opacity: 0.8;border: 1px solid #ccc;border-radius: 4pt;box-shadow: 0 0 0 1pt rgba(128, 128, 128, 0);}</style>
@@ -22,7 +23,7 @@
       <!--TMPL_INCLUDE NAME="header.html"-->
       {% include "main/blocks/header.html" %}
       <!--TMPL_INCLUDE NAME="navbar.html"-->
-      {% include "main/blocks/navbar.html" %}
+      {% include "main/blocks/navbar2.html" %}
     </header>
     {% block workarea %}{% endblock  %}
     <!--TMPL_INCLUDE NAME="inc/main.footer.html"-->
