--- a/main/templates/main/blocks/footer.html
+++ b/main/templates/main/blocks/footer.html
@@ -132,12 +132,12 @@
     </div>
   </div>
 </footer>
-<div id="basket">
+{% comment %} <div id="basket">
   <a href="/basket" title="Открыть корзину">
     <!--span class="char-m-ico typcn typcn-shopping-cart"></span-->
     <span id="basket-info">Пусто</span>
   </a>
-</div>
+</div> {% endcomment %}
 <div id="_running" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;">
   <div style="position: absolute; top: 50%; left: 50%; z-index: 9990">
     <img src="{% static "/images/running.gif"%}" alt="Подождите, идет загрузка..." />
